imporved rat-repository