@@ -8,6 +8,8 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.Reader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.stream.Collectors;
 
@@ -18,6 +20,7 @@ import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 
+import de.fhg.aisec.ids.attestation.PcrMessage;
 import de.fhg.aisec.ids.messages.AttestationProtos.IdsAttestationType;
 import de.fhg.aisec.ids.messages.AttestationProtos.Pcr;
 import de.fhg.aisec.ids.messages.Idscp.ConnectorMessage;
@@ -25,24 +28,32 @@ import de.fhg.aisec.ids.messages.Idscp.ConnectorMessage;
 public class TrustedThirdParty {
 
 	private Logger LOG = LoggerFactory.getLogger(TrustedThirdParty.class);
-	private String ttpUrl = "http://127.0.0.1:8080";
 	private String freshNonce = "";
 	private ConnectorMessage msg = null;
+	private URI adr;
 	
-	public TrustedThirdParty(ConnectorMessage msg) {
+	public TrustedThirdParty(ConnectorMessage msg, URI adr) {
 		this.msg = msg;
+		this.adr = adr;
 	}
 
-	public TrustedThirdParty() {
+	public TrustedThirdParty(URI adr) {
 		this.msg = null;
+		this.adr = adr;
 	}
 
-	public boolean pcrValuesCorrect() throws IOException {
+	public boolean pcrValuesCorrect() {
 		freshNonce = NonceGenerator.generate();
 		if(this.msg != null) {
 			String json = this.jsonToString(freshNonce);
-			PcrMessage response = this.readResponse(json, ttpUrl);
-			LOG.debug(response.toString());
+			PcrMessage response;
+			try {
+				response = this.readResponse(json);
+				LOG.debug(response.toString());
+			} catch (IOException e) {
+				e.printStackTrace();
+				return false;
+			}
 			return response.isSuccess();
 		}
 		else {
@@ -50,25 +61,27 @@ public class TrustedThirdParty {
 		}
 	}
 	
-	public String jsonToString(String nonce) throws IOException {
+	public String jsonToString(String nonce) {
 		Gson gson = new Gson();
 		return gson.toJson(new PcrMessage(msg));
 	}
 	
-	public PcrMessage readResponse(String json, String query) throws IOException {
+	public PcrMessage readResponse(String json) throws IOException {
 		Gson gson = new Gson();
-		URL url = new URL(query);
-		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+		HttpURLConnection conn = (HttpURLConnection) this.adr.toURL().openConnection();
 		conn.setConnectTimeout(5000);
 		conn.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
 		conn.setDoOutput(true);
 		conn.setDoInput(true);
 		conn.setRequestMethod("POST");
 		OutputStream os = conn.getOutputStream();
-		os.write(json.toString().getBytes("utf-8"));
+		String toWrite = "data=" + json.toString();
+		os.write(toWrite.getBytes("utf-8"));
 		os.flush();
 		os.close();
-		String jsonString = this.inputStreamToString(new BufferedInputStream(conn.getInputStream()));
+		InputStream is = conn.getInputStream();
+		BufferedInputStream bis = new BufferedInputStream(is);
+		String jsonString = this.inputStreamToString(bis);
 		return gson.fromJson(jsonString, PcrMessage.class);
 	}
 
